--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = espressif8266
 framework = arduino
 board = nodemcuv2
 monitor_speed = 115200
-lib_deps = marvinroger/AsyncMqttClient@^0.9.0
+lib_deps = 
+	marvinroger/AsyncMqttClient@^0.9.0
+	bblanchon/ArduinoJson@^6.19.4
