--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 lib_deps = 
 	marvinroger/AsyncMqttClient@^0.9.0
 	bblanchon/ArduinoJson@^6.19.4
+	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.3.0
