--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	marvinroger/AsyncMqttClient@^0.9.0
 	bblanchon/ArduinoJson@^6.19.4
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.3.0
+	adafruit/Adafruit NeoPixel@^1.10.7
