--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif8266
 framework = arduino
 board = nodemcuv2
 monitor_speed = 115200
+board_build.filesystem = littlefs
 lib_deps = 
 	marvinroger/AsyncMqttClient@^0.9.0
 	bblanchon/ArduinoJson@^6.19.4
