tiny-js, first tries

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ framework = arduino
 board = nodemcuv2
 monitor_speed = 115200
 board_build.filesystem = littlefs
+build_flags = -D PIO_FRAMEWORK_ARDUINO_ENABLE_EXCEPTIONS
 lib_deps = 
 	marvinroger/AsyncMqttClient@^0.9.0
 	bblanchon/ArduinoJson@^6.19.4
