subscription string list (not jet working)

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,10 +14,10 @@ framework = arduino
 board = nodemcuv2
 monitor_speed = 115200
 board_build.filesystem = littlefs
-;allow try catch
 build_flags = -D PIO_FRAMEWORK_ARDUINO_ENABLE_EXCEPTIONS
 lib_deps = 
 	marvinroger/AsyncMqttClient@^0.9.0
 	bblanchon/ArduinoJson@^6.19.4
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.3.0
 	adafruit/Adafruit NeoPixel@^1.10.7
+	ivanseidel/LinkedList@0.0.0-alpha+sha.dac3874d28
