JS Enable flag in main config added and used

--- a/data/config_main.json
+++ b/data/config_main.json
@@ -1,4 +1,5 @@
 {
-    "DEVICEID": "Assembly-001",
-    "ACCESSPOINT": true
+    "DEVICEID": "iot7",
+    "ACCESSPOINT": true,
+    "JSACTIVE": true
 }
