--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,9 @@ platform = espressif8266
 framework = arduino
 board = nodemcuv2
 monitor_speed = 115200
+monitor_filters = esp8266_exception_decoder, default, time, colorize, log2file
+;build_type =  debug
+build_type =  release
 board_build.filesystem = littlefs
 build_flags = -D PIO_FRAMEWORK_ARDUINO_ENABLE_EXCEPTIONS
 lib_deps = 
